--- a/index.html
+++ b/index.html
@@ -348,76 +348,94 @@
             </div>
         </div>
 
-        <div class="subscriptions-list">
+        <div class="subscriptions-list container">
 
             <div class="subscriptions-item">
-                <div class="subscriptions-pouring">
-                    <p class="title-subscriptions">
-                        МИНИМАЛЬНЫЙ
-                    </p>
-                    <p class="description-subscriptions">
-                        Количество и время занятий: 4 любых занятия (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. Срок действия: 30 календарных дней, с момента преобретения
-                    </p>
-                    <div>
-                        <div class="price-subscriptions">
-                            <p class="price">
-                                Цена:
-                            </p>
-                            <p class="price-accent">
-                                4000
-                            </p>
+                <div class="rate-img rate-min">
+                    <div class="subscriptions-pouring">
+                        <div class="rate">
+                            <div class="text-subscriptions">
+                                <p class="title-subscriptions">
+                                    МИНИМАЛЬНЫЙ
+                                </p>
+                                <p class="description-subscriptions">
+                                    Количество и время занятий: 4 любых занятия (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. <br> Срок действия: 30 календарных дней, с момента преобретения
+                                </p>
+                            </div>
+                            <div class="price-buy">
+                                <div class="price-subscriptions">
+                                    <p class="price">
+                                        Цена:
+                                    </p>
+                                    <p class="price-accent">
+                                        4 000 ₽
+                                    </p>
+                                </div>
+                                <button class="buy btn-yellow">
+                                    Купить
+                                </button>
+                            </div>
                         </div>
-                        <button class="buy">
-                            Купить
-                        </button>
                     </div>
                 </div>
             </div>
 
             <div class="subscriptions-item">
-                <div class="subscriptions-pouring">
-                    <p class="title-subscriptions">
-                        СТАНДАРТНЫЙ
-                    </p>
-                    <p class="description-subscriptions">
-                        Количество и время занятий: 8 любых занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. Срок действия: 30 календарных дней, с момента преобретения
-                    </p>
-                    <div>
-                        <div class="price-subscriptions">
-                            <p class="price">
-                                Цена:
-                            </p>
-                            <p class="price-accent">
-                                7400
-                            </p>
+                <div class="rate-img rate-standart">
+                    <div class="subscriptions-pouring">
+                        <div class="rate">
+                            <div class="text-subscriptions">
+                                <p class="title-subscriptions">
+                                    СТАНДАРТНЫЙ
+                                </p>
+                                <p class="description-subscriptions">
+                                    Количество и время занятий: 8 любых занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. <br> Срок действия: 30 календарных дней, с момента преобретения
+                                </p>
+                            </div>
+                            <div class="price-buy">
+                                <div class="price-subscriptions">
+                                    <p class="price">
+                                        Цена:
+                                    </p>
+                                    <p class="price-accent">
+                                        7 400 ₽
+                                    </p>
+                                </div>
+                                <button class="buy btn-yellow">
+                                    Купить
+                                </button>
+                            </div>
                         </div>
-                        <button class="buy">
-                            Купить
-                        </button>
                     </div>
                 </div>
             </div>
 
             <div class="subscriptions-item">
-                <div class="subscriptions-pouring">
-                    <p class="title-subscriptions">
-                        БЕЗЛИМИТНЫЙ
-                    </p>
-                    <p class="description-subscriptions">
-                        Количество и время занятий:  любое колличество занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию, в течение 30 календарных дней. Срок действия: 30 календарных дней, с момента преобретения
-                    </p>
-                    <div>
-                        <div class="price-subscriptions">
-                            <p class="price">
-                                Цена:
-                            </p>
-                            <p class="price-accent">
-                                14000
-                            </p>
+                <div class="-img rate-max">
+                    <div class="subscriptions-pouring">
+                        <div class="rate">
+                            <div class="text-subscriptions">
+                                <p class="title-subscriptions">
+                                    БЕЗЛИМИТНЫЙ
+                                </p>
+                                <p class="description-subscriptions">
+                                    Количество и время занятий:  любое колличество занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию, в течение 30 календарных дней. <br> Срок действия: 30 календарных дней, с момента преобретения
+                                </p>
+                            </div>
+                            <div class="price-buy">
+                                <div class="price-subscriptions">
+                                    <p class="price">
+                                        Цена:
+                                    </p>
+                                    <p class="price-accent">
+                                        14 000 ₽
+                                    </p>
+                                </div>
+                                <button class="buy btn-yellow">
+                                    Купить
+                                </button>
+                            </div>
                         </div>
-                        <button class="buy">
-                            Купить
-                        </button>
                     </div>
                 </div>
             </div>
@@ -429,70 +447,76 @@
 
 <!-- footer -->
 
-<section class="footer-section">
+<section class="footer-section section-background">
     <div class="container">
         <div class="messengers">
             <p class="title-messengers">
                 НАШИ СОЦСЕТИ
             </p>
-            <!-- иконка фейсбука
-            иконка инсты
-            иконка ютуба -->
-        </div>
-    </div>
-
-    <div class="menu-footer">
-        <div class="section-logo">
-            <p class="logo">En l'air</p>
-            <p class="dance-club">
-                lifestyle dance club
-            </p>    
-        </div>
-        <div class="menu-list">
-            <p class="menu-item">
-                Направления
-            </p>
-            <p class="menu-item">
-                Расписание
-            </p>
-            <p class="menu-item">
-                Абонементы
-            </p>
-            <p class="menu-item">
-                Преподаватели
-            </p>
-        </div>
-
-        <div>
-            <p class="title-contacts">
-                КОНТАКТЫ:
-            </p>    
-        </div>
-        <div class="contacts-footer-list">
-            <div class="address-list contacts-footer-item">
-                <p class="address-item">
-                    г. Москва ул. Андропова, 33 
-                </p>
-                <p class="address-item">
-                    г. Москва ул. Балтийская 9 
-                </p>
-                <p class="address-item">
-                    г. Москва ул.  Херсонская, 43 
-                </p>
-            </div>
-
-            <div class="telephone-list contacts-footer-item">
-                <p class="telephone-item">
-                    8 (499) 685-15-22 
-                </p>
-                <p class="telephone-item">
-                    8 (499) 685-15-12 
-                </p>
-                <p class="telephone-item">
-                    8 (499) 685-15-33
-                </p>
+            <div class="messengers-footer-list">
+                <i class="fa-brands fa-square-facebook messengers-footer"></i>
+                <i class="fa-brands fa-square-instagram messengers-footer"></i>
+                <i class="fa-brands fa-youtube messengers-footer"></i>
             </div>
         </div>
+
+        <div class="info-footer">
+            <div class="menu-footer">
+                <div class="section-logo">
+                    <p class="logo">En l'air</p>
+                    <p class="dance-club">
+                        lifestyle dance club
+                    </p>    
+                </div>
+                <div class="menu-list">
+                    <p class="menu-item">
+                        Направления
+                    </p>
+                    <p class="menu-item">
+                        Расписание
+                    </p>
+                    <p class="menu-item">
+                        Абонементы
+                    </p>
+                    <p class="menu-item">
+                        Преподаватели
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <p class="title-contacts">
+                    КОНТАКТЫ:
+                </p>    
+            </div>
+            <div class="contacts-footer-list">
+                <div class="address-list contacts-footer-item">
+                    <p class="address-item">
+                        г. Москва ул. Андропова, 33 
+                    </p>
+                    <p class="address-item">
+                        г. Москва ул. Балтийская 9 
+                    </p>
+                    <p class="address-item">
+                        г. Москва ул.  Херсонская, 43 
+                    </p>
+                </div>
+
+                <div class="telephone-list contacts-footer-item">
+                    <p class="telephone-item">
+                        8 (499) 685-15-22 
+                    </p>
+                    <p class="telephone-item">
+                        8 (499) 685-15-12 
+                    </p>
+                    <p class="telephone-item">
+                        8 (499) 685-15-33
+                    </p>
+                </div>
+            </div>
+            
+        </div>
+
     </div>
 </section>
 
