--- a/index.html
+++ b/index.html
@@ -469,52 +469,52 @@
                     </p>    
                 </div>
                 <div class="menu-list">
-                    <p class="menu-item">
-                        Направления
-                    </p>
-                    <p class="menu-item">
-                        Расписание
-                    </p>
-                    <p class="menu-item">
-                        Абонементы
-                    </p>
-                    <p class="menu-item">
-                        Преподаватели
-                    </p>
+                    <div class="menu-item">
+                        <a href="">Направления</a> 
+                    </div>
+                    <div class="menu-item">
+                        <a href="">Расписание</a>
+                    </div>
+                    <div class="menu-item">
+                        <a href="">Абонементы</a>
+                    </div>
+                    <div class="menu-item">
+                        <a href="">Преподаватели</a>
+                    </div>
                 </div>
             </div>
 
-            <div>
+            <div class="all-contacts">
                 <p class="title-contacts">
                     КОНТАКТЫ:
                 </p>    
-            </div>
-            <div class="contacts-footer-list">
-                <div class="address-list contacts-footer-item">
-                    <p class="address-item">
-                        г. Москва ул. Андропова, 33 
-                    </p>
-                    <p class="address-item">
-                        г. Москва ул. Балтийская 9 
-                    </p>
-                    <p class="address-item">
-                        г. Москва ул.  Херсонская, 43 
-                    </p>
-                </div>
-
-                <div class="telephone-list contacts-footer-item">
-                    <p class="telephone-item">
-                        8 (499) 685-15-22 
-                    </p>
-                    <p class="telephone-item">
-                        8 (499) 685-15-12 
-                    </p>
-                    <p class="telephone-item">
-                        8 (499) 685-15-33
-                    </p>
-                </div>
-            </div>
             
+                <div class="contacts-footer-list">
+                    <div class="address-list contacts-footer-item">
+                        <p class="address-item">
+                            г. Москва ул. Андропова, 33 
+                        </p>
+                        <p class="address-item">
+                            г. Москва ул. Балтийская 9 
+                        </p>
+                        <p class="address-item">
+                            г. Москва ул.  Херсонская, 43 
+                        </p>
+                    </div>
+
+                    <div class="telephone-list contacts-footer-item">
+                        <p class="telephone-item">
+                            8 (499) 685-15-22 
+                        </p>
+                        <p class="telephone-item">
+                            8 (499) 685-15-12 
+                        </p>
+                        <p class="telephone-item">
+                            8 (499) 685-15-33
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
