--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                 </div>
                 <nav class="nav-list">
                     <div class="nav-item">
-                        <a href="">Направления</a>
+                        <a href="#direction">Направления</a>
                     </div>
                     <div class="nav-item">
-                        <a href="">Расписание</a>
+                        <a href="/schedule.html">Расписание</a>
                     </div>
                     <div class="nav-item">
-                        <a href="">Абонементы</a>
+                        <a href="#subscriptions">Абонементы</a>
                     </div>
                     <div class="nav-item">
-                        <a href="">Преподаватели</a>
+                        <a href="/teachers.html">Преподаватели</a>
                     </div>
                     <div class="nav-item">
-                        <a href="">Контакты</a>
+                        <a href="#footer">Контакты</a>
                     </div>
                 </nav>
             </header>
@@ -103,7 +103,7 @@
 
 <main>
 
-    <section class="section-background section-direction">
+    <section class="section-background section-direction" id="direction">
         <div class="container">
             <div class="title">
                 <h2 class="direction-title">
@@ -321,7 +321,7 @@
 
     <!-- Абонементы -->
 
-    <section class="section-background section-subscriptions">
+    <section class="section-background section-subscriptions" id="subscriptions">
         <div class="container">
             <div class="title">
                 <h2 class="subscriptions-title">
@@ -447,7 +447,7 @@
 
 <!-- footer -->
 
-<section class="footer-section section-background">
+<section class="footer-section section-background" id="footer">
     <div class="container">
         <div class="messengers">
             <p class="title-messengers">
@@ -470,16 +470,16 @@
                 </div>
                 <div class="menu-list">
                     <div class="menu-item">
-                        <a href="">Направления</a> 
+                        <a href="#direction">Направления</a> 
                     </div>
                     <div class="menu-item">
-                        <a href="">Расписание</a>
+                        <a href="/schedule.html">Расписание</a>
                     </div>
                     <div class="menu-item">
-                        <a href="">Абонементы</a>
+                        <a href="#subscriptions">Абонементы</a>
                     </div>
                     <div class="menu-item">
-                        <a href="">Преподаватели</a>
+                        <a href="/teachers.html">Преподаватели</a>
                     </div>
                 </div>
             </div>
