--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 </div>
 
-<main>
+<main class="section-background">
 
     <section class="section-background section-direction" id="direction">
         <div class="container">
