--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/reset.css">
 
     <!-- Подключаем стили= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/schedule.css">
 
     <!-- Шрифт Roboto Condensed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,9 +101,269 @@
     </section>
 </div>
 
-<main>
+<main class="section-background">
+
+    <section class="section-schedule">
+        <div class="container">
+            <div class="title">
+                <h2 class="schedule-title">
+                    Расписание
+                </h2>
+                <p class="double-title">
+                    Расписание
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="cards-schedule-list">
 
 
+            <!-- <div class="cards-schedule-item">
+                <div class="schedule-position">
+                    <div class="cards-item-img cards-pole-dance">
+                        <div>
+                            <p class="name-schedule">
+                                <span class="accent-schedule">Pole Dance</span>
+                            </p>
+                        </div>
+                        <div class="schedule-date">
+                            <div class="date-list">
+                                <p class="text-date">
+                                    ПН: 20: 00 - 23:00 
+                                </p>
+                                <p class="text-date">
+                                    СР: 20: 00 - 23:00  
+                                </p>
+                                <p class="text-date">
+                                    СБ: 12: 00 - 16:00
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div> -->
+
+
+
+            <div class="cards-schedule-item">
+                <div class="schedule-position">
+                    <div class="cards-item-img cards-pole-dance">
+                        <div class="border-accent">
+                            <p class="name-schedule">
+                                <span class="accent-schedule">Pole Dance</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="schedule-date">
+                        <div class="schedule-date-border">
+                            <div class="date-list">
+                                <p class="text-date">
+                                    ПН: 20: 00 - 23:00 
+                                </p>
+                                <p class="text-date">
+                                    СР: 20: 00 - 23:00  
+                                </p>
+                                <p class="text-date">
+                                    СБ: 12: 00 - 16:00
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+            <div class="cards-schedule-item">
+                <div class="cards-item-img cards-children">
+                    <div class="border-accent">
+                        <p class="name-schedule">
+                            <span class="accent-schedule">ДЛЯ ДЕТЕЙ</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="schedule-date">
+                    <div class="schedule-date-border">
+                        <div class="date-list">
+                            <p class="text-date">
+                                ПН: 20: 00 - 23:00 
+                            </p>
+                            <p class="text-date">
+                                СР: 20: 00 - 23:00  
+                            </p>
+                            <p class="text-date">
+                                СБ: 12: 00 - 16:00
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+            <div class="cards-schedule-item">
+                <div class="cards-item-img cards-hip-hop">
+                    <div class="border-accent">
+                        <p class="name-schedule">
+                            <span class="accent-schedule">HIP-HOP</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="schedule-date">
+                    <div class="schedule-date-border">
+                        <div class="date-list">
+                            <p class="text-date">
+                                ПН: 20: 00 - 23:00 
+                            </p>
+                            <p class="text-date">
+                                СР: 20: 00 - 23:00  
+                            </p>
+                            <p class="text-date">
+                                СБ: 12: 00 - 16:00
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+            <div class="cards-schedule-item">
+                <div class="cards-item-img cards-caribbean-mix">
+                    <div class="border-accent">
+                        <p class="name-schedule">                    
+                            <span class="accent-schedule">CARIBBEAN MIX</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="schedule-date">
+                    <div class="schedule-date-border">
+                        <div class="date-list">
+                            <p class="text-date">
+                                ПН: 20: 00 - 23:00 
+                            </p>
+                            <p class="text-date">
+                                СР: 20: 00 - 23:00  
+                            </p>
+                            <p class="text-date">
+                                СБ: 12: 00 - 16:00
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+            <div class="cards-schedule-item">
+                <div class="cards-item-img cards-sky-jumping">
+                    <div class="border-accent">
+                        <p class="name-schedule">
+                            <span class="accent-schedule">Sky Jumping</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="schedule-date">
+                    <div class="schedule-date-border">
+                        <div class="date-list">
+                            <p class="text-date">
+                                ПН: 20: 00 - 23:00 
+                            </p>
+                            <p class="text-date">
+                                СР: 20: 00 - 23:00  
+                            </p>
+                            <p class="text-date">
+                                СБ: 12: 00 - 16:00
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+            <div class="cards-schedule-item">
+                <div class="cards-item-img cards-dance-mix">
+                    <div class="border-accent">
+                        <p class="name-schedule">
+                            <span class="accent-schedule"> Dance Mix </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="schedule-date">
+                    <div class="schedule-date-border">
+                        <div class="date-list">
+                            <p class="text-date">
+                                ПН: 20: 00 - 23:00 
+                            </p>
+                            <p class="text-date">
+                                СР: 20: 00 - 23:00  
+                            </p>
+                            <p class="text-date">
+                                СБ: 12: 00 - 16:00
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="button-list">
+                    <button class="btn btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 </main>
 
