--- a/schedule.html
+++ b/schedule.html
@@ -73,10 +73,10 @@
                     </div>
                     <div class="hero-block">
                         <h1 class="hero-title">
-                            Время новых увлечений!
+                            Приведи друга
                         </h1>
                         <p class="hero-description">
-                            Специальное предлжение для студентов - En l'air дарит скидку - 20% на базовую карту!
+                            При покупке клубной карты другом - En l'air дарит подарки Вам
                         </p>
                         <div class="hero-button">
                             <button class="btn hero-btn">
@@ -119,46 +119,10 @@
     <section class="container">
         <div class="cards-schedule-list">
 
-
-            <!-- <div class="cards-schedule-item">
-                <div class="schedule-position">
-                    <div class="cards-item-img cards-pole-dance">
-                        <div>
-                            <p class="name-schedule">
-                                <span class="accent-schedule">Pole Dance</span>
-                            </p>
-                        </div>
-                        <div class="schedule-date">
-                            <div class="date-list">
-                                <p class="text-date">
-                                    ПН: 20: 00 - 23:00 
-                                </p>
-                                <p class="text-date">
-                                    СР: 20: 00 - 23:00  
-                                </p>
-                                <p class="text-date">
-                                    СБ: 12: 00 - 16:00
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="button-list">
-                    <button class="btn-yellow">
-                        Записаться
-                    </button>
-                    <button class="btn-transparent">
-                        Подробнее
-                    </button>
-                </div>
-            </div> -->
-
-
-
             <div class="cards-schedule-item">
                 <div class="schedule-position">
                     <div class="cards-item-img cards-pole-dance">
+                    <div class="img-ten"></div>  
                         <div class="border-accent">
                             <p class="name-schedule">
                                 <span class="accent-schedule">Pole Dance</span>
@@ -362,6 +326,18 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="container section-more">
+        <div class="more">
+            <div class="more-linear"></div>
+            <div class="more-list">
+                <p class="more-text">
+                    Посмотреть все
+                </p>
+                <i class="fa-solid fa-chevron-down icon-more"></i>
+            </div>
         </div>
     </section>
 
