--- a/teachers.html
+++ b/teachers.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/reset.css">
 
     <!-- Подключаем стили= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/teachers.css">
 
     <!-- Шрифт Roboto Condensed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
     <!-- Иконки -->
     <script src="https://kit.fontawesome.com/9d86f44a3a.js" crossorigin="anonymous"></script>
 
-    <title>Студия танцев</title>
+    <title>Преподаватели студии</title>
 
 </head>
 <body>
@@ -103,7 +103,27 @@
 
 <main class="section-background">
 
+    <section class="section-teachers">
+        <div class="container">
+            <div class="title">
+                <h2 class="teachers-title">
+                    Преподаватели
+                </h2>
+                <p class="double-title">
+                    Преподаватели
+                </p>
+            </div>
+        </div>
+    </section>
 
+    <section class="container section-description"> 
+        <div>
+            <p class="text-description">
+                Страница находится в разработке <br>
+                Скоро  <span class="accent"> здесь будет красиво ♥ </span>
+            </p>
+        </div>
+    </section>
 
 </main>
 
