--- a/pole-dance.html
+++ b/pole-dance.html
@@ -132,13 +132,13 @@
                 </div>
                 <div class="menu-list">
                     <div class="menu-item">
-                        <a href="#direction">Направления</a> 
+                        <a href="/index.html#direction">Направления</a> 
                     </div>
                     <div class="menu-item">
                         <a href="/schedule.html">Расписание</a>
                     </div>
                     <div class="menu-item">
-                        <a href="#subscriptions">Абонементы</a>
+                        <a href="/index.html#subscriptions">Абонементы</a>
                     </div>
                     <div class="menu-item">
                         <a href="/teachers.html">Преподаватели</a>
