--- a/teachers.html
+++ b/teachers.html
@@ -41,13 +41,13 @@
                 </div>
                 <nav class="nav-list">
                     <div class="nav-item">
-                        <a href="#direction">Направления</a>
+                        <a href="/index.html#direction">Направления</a>
                     </div>
                     <div class="nav-item">
                         <a href="/schedule.html">Расписание</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#subscriptions">Абонементы</a>
+                        <a href="/index.html#subscriptions">Абонементы</a>
                     </div>
                     <div class="nav-item">
                         <a href="/teachers.html">Преподаватели</a>
